agregue lo que faltaba y modifique el link de la imagen y el de google que no andaban

--- a/Practica HTML/ej4Completo.html
+++ b/Practica HTML/ej4Completo.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <a href="https://www.frro.utn.edu.ar/">
-            <img src="utnHeader.png" alt="UTN FRRO logo" width="100" height="100"/>
+            <img src="https://frro.cvg.utn.edu.ar/pluginfile.php/1/theme_snap/logo/1710991180/logo-utn-siglas.png" alt="UTN FRRO logo" width="100" height="100"/>
         </a>
     </header>
     <hr>
@@ -56,7 +56,7 @@
             <!--En la tercera parte se debe crear una marca con el id #enunciado para hacer esto funcional-->
         </li>
         <li value="2">
-            <a href="google.com" target="_blank">Resolución</a>
+            <a href="https://www.google.com/" target="_blank">Resolución</a>
         </li>
     </ol>
     <br>
@@ -68,5 +68,18 @@
         <input type="submit" id="botonEnviar" name="botonEnviar" value="Enviar" />
         <input type="reset" id="botonBorrar" name="botonBorrar" value="Borrar" />
     </form>
+    <h2 id="enunciado">Enunciado del examen</h2>
+    <p>
+        Ejercicio 1: ................................................... <br>
+        .......................................................................
+    </p>
+    <p>
+        Ejercicio 2:................................................... <br>
+        .......................................................................
+    </p>
+    <p>
+        Para más información comunicarse con:
+        <a href="mailto:depto.alumnos@frro.utn.edu.ar">depto.alumnos@frro.utn.edu.ar</a>
+    </p>
 </body>
 </html>
